--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
     <div class="about-me container">
 
       <div class="section-title">
-        <h2>Esto es...</h2>
-        <p>Mas sobre mí</p>
+        <h2>Mas sobre mí</h2>
       </div>
       
       <div class="row">
@@ -75,8 +74,103 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Desarrollador Web</h3>
           <p class="font-italic">
-            Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en Ingeniería en Desarrollo de Software. Programador Analista para Sistema SIDCO en Productos Alimenticios DIANA. Me apasiona la tecnología, ser autodidacta, y tengo mucha disposición de aprender cosas nuevas cada día.</p>
-            <p>
+            Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en Ingeniería en Desarrollo de Software. Programador Analista para Sistema Web SIDCO en Productos Alimenticios DIANA. Me apasiona la tecnología, ser autodidacta, y tengo mucha disposición de aprender cosas nuevas cada día.</p>
+            <hr class="style1">
+            <br>
+                          <!-- Gallery -->
+              <div class="row">
+                <div class="col-lg-12 col-md-10 mb-4 mb-lg-0">
+                  <img
+                    src="assets/img/html-5.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/css-3.png"
+                    class=" rounded "
+                    alt="Wintry Mountain Landscape"
+                  />
+                  <img
+                    src="assets/img/js.png"
+                    class="  rounded "
+                    alt="Waves at Sea"
+                  />
+                  <img
+                    src="assets/img/php.png"
+                    class=" rounded "
+                    alt="Yosemite National Park"
+                  />
+                  <img
+                    src="assets/img/jquery.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/react.png"
+                    class="rounded "
+                    alt="Mountains in the Clouds"
+                  />
+                  <img
+                    src="assets/img/bootstrap.png"
+                    class="rounded "
+                    alt="Mountains in the Clouds"
+                  />
+                  <img
+                    src="assets/img/java.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                 <img
+                    src="assets/img/jsp.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                 <img
+                    src="assets/img/hibernate.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/c-sharp.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/asp.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/sql.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/mysql.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/postgresql.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/xml.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                  <img
+                    src="assets/img/git.png"
+                    class=" rounded "
+                    alt="Boat on Calm Water"
+                  />
+                </div>
+
+              </div>
+              <!-- Gallery -->
+
+            <!-- <p>
                <ul>
                 <li><i class="icofont-code"></i>HTML - CSS- BOOTSTRAP - JS - PHP </li>
                 <li><i class="icofont-code"></i>JAVA WEB - JSP - SERVLETS - HIBERNATE</li> 
@@ -86,7 +180,7 @@
                 <li><i class="icofont-code"></i> SCRUM - GIT</li>
                 <li><i class="icofont-code"></i> </li> 
               </ul>
-            </p>
+            </p> -->
             <hr class="style1">
             <br>
           <div class="row">
@@ -111,13 +205,15 @@
     </div><!-- FIN MAs de mi -->
   </section><!-- Fin Acerca de ..-->
 
+
+
   <!-- ======= CV SECTION======= -->
   <section id="resume" class="resume">
     <div class="container">
 
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
-        <a class="btn" href="assets/CVSaenz2022.pdf" download="cvSaenz2022">Descargar PDF Aquí! <i class="icofont-download"></i></a>
+        <a class="btn" href="assets/CVSaenz2022.pdf" download="cvSaenz2022">Descargar CV PDF <i class="icofont-download"></i></a>
       </div>
 
 
@@ -196,7 +292,6 @@
 
       <div class="section-title">
         <h2>Páginas web, Proyectos y más</h2>
-        <p>Portafolio</p>
       </div>
 
       <div class="row">
@@ -286,8 +381,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>text me</h2>
-        <p>Contactame</p>
+        <h2>Contactame</h2>
       </div>
 
       <div class="row mt-2">
@@ -375,7 +469,7 @@
 
     <div class="background-container">
 
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png" alt="">
 
       <div class="stars"></div>
       <div class="twinkling"></div>
