--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en Ingeniería en Desarrollo de Software. Programador Analista para Sistema Web SIDCO en Productos Alimenticios DIANA. Me apasiona la tecnología, ser autodidacta, y tengo mucha disposición de aprender cosas nuevas cada día.</p>
             <hr class="style1">
             <br>
+            <h4>Conocimientos en...</h4><br>
                           <!-- Gallery -->
               <div class="row">
                 <div class="col-lg-12 col-md-10 mb-4 mb-lg-0">
