--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
     <div class="background-container">
 
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png" alt="">
+        <img src="assets/img/imgBG2.png" alt="">
 
       <div class="stars"></div>
       <div class="twinkling"></div>
