--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en Ingeniería en Desarrollo de Software. Programador Analista para Sistema Web SIDCO en Productos Alimenticios DIANA. Me apasiona la tecnología, ser autodidacta, y tengo mucha disposición de aprender cosas nuevas cada día.</p>
             <hr class="style1">
             <br>
-            <h4>Conocimientos en...</h4><br>
+            <p><span>Tecnologías:</span> </p><br>
                           <!-- Gallery -->
               <div class="row">
                 <div class="col-lg-12 col-md-10 mb-4 mb-lg-0">
@@ -187,17 +187,15 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Github:</strong>   https://github.com/NapoleonSNZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>DUI:</strong> 03509938-5</li>
-                <li><i class="icofont-rounded-right"></i> <strong>NIT:</strong> 0614-251285-112-7</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Residencia:</strong> Santa Tecla, El Salvador</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> napoleonsaenz85@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Github:</strong> https://github.com/NapoleonSNZ</li>
+
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> napoleonsaenz85@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Residencia:</strong> Santa Tecla, El Salvador</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Idiomas:</strong> Español, Ingles Intermedio</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Nacimiento:</strong> 25 Dic 1985</li>
               </ul>
             </div>
           </div>
@@ -470,7 +468,7 @@
 
     <div class="background-container">
 
-        <img src="assets/img/imgBG3.png" alt="">
+        <img src="assets/img/imgBG9.png" alt="">
 
       <div class="stars"></div>
       <div class="twinkling"></div>
