--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                <ul>
                 <li><i class="icofont-code"></i>HTML - CSS- BOOTSTRAP - JS - PHP </li>
                 <li><i class="icofont-code"></i>JAVA WEB - JSP - SERVLETS - HIBERNATE</li> 
+                <li><i class="icofont-code"></i>SPRING - THYMELEAF - </li> 
                 <li><i class="icofont-code"></i>C# - ASP.NET - ENTITY FRAMEWORK </li>
                 <li><i class="icofont-code"></i>REACT JS </li> 
                 <li><i class="icofont-code"></i> SQL SERVER - MYSQL</li>
@@ -212,7 +213,7 @@
 
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
-        <a class="btn" href="assets/CVSaenz2022.pdf" download="cvSaenz2022">Descargar CV PDF <i class="icofont-download"></i></a>
+        <a class="btn" href="assets/cvSNZWD2022.pdf" download="cvSNZWD2022">Descargar CV PDF <i class="icofont-download"></i></a>
       </div>
 
 
