--- a/index.html
+++ b/index.html
@@ -247,9 +247,10 @@
             <p><em>DATASOFT S.A. DE C.V. </em></p>
             <p>
             <ul>
-              <li>Mantenimiento y Desarrollo de Sistema Web Sidco en Productos Alimenticios DIANA, en sus distintas Distribuidoras en Guatemala, Honduras y Nicaragua.</li>
-              <li>Analista SQL.</li>
-              <li>Atención de requerimientos sobre fallas o modificaciones en portal Sidco y bases de datos en ambientes de prueba, desarrollo o producción.</li>
+              <li>- Mantenimiento y Desarrollo de Sistema Web “SIDCO”, en sus distintas Distribuidoras en Guatemala, Honduras y Nicaragua; y atención de requerimientos sobre fallas o modificaciones en Sistema Web y/o Bases de Datos en ambientes de prueba, desarrollo o producción.
+               s</li>
+              <li>*MYSQL JAVA JSP SERVLETS</li>
+              
             </ul>
             </p>
           </div>
