--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  
       <h1><a href="index.html">Napoleón Sáenz</a></h1>
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>Hola, soy <span>Desarrollador Web</span> </h2>
+      <h2>Bienvenid@ soy <span>Desarrollador de Software</span> </h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
