cambio texto en "MAs de mí"

--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
           <img src="assets/img/me.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Desarrollador Web</h3>
+          <h3>Desarrollador de Software</h3>
           <p class="font-italic">
-            Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en Ingeniería en Desarrollo de Software. Programador Analista para Sistema Web SIDCO en Productos Alimenticios DIANA. Me apasiona la tecnología, ser autodidacta, y tengo mucha disposición de aprender cosas nuevas cada día.</p>
+            Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en
+            Ingeniería en Desarrollo de Software. Soporte de Software en Sistema Web
+            "SIDCO" en Productos Alimenticios DIANA. Me gusta el desarrollo web, ser
+            autodidacta, y tengo mucha disposición de aprender tecnologías nuevas cada día.
+          </p>
             <hr class="style1">
             <br>
             <p><span>Tecnologías:</span> </p><br>
