--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
     <div class="background-container">
 
 
-        <img src="assets/img/imgBG9.png" alt="">
+        <img src="assets/img/suri_dev.png" alt="">
 
 
       <div class="stars"></div>
