--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
       <div class="stars"></div>
       <div class="twinkling"></div>
         <div class="clouds"></div>
-  
+    </div>
 </body>
 
 </html>
