--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
-        <a class="btn" href="assets/CVSaenzQ.pdf" download="cvSNZWD2022">Descargar CV PDF <i class="icofont-download"></i></a>
+        <a class="btn" href="assets/CV_SaenzQ.pdf" download="cvSNZWD2022">Descargar CV PDF <i class="icofont-download"></i></a>
       </div>
 
 
