--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
             <p><em>DATASOFT S.A. DE C.V. </em></p>
             <p>
             <ul>
-              <li>- Mantenimiento y Desarrollo de Sistema Web “SIDCO”, en sus distintas Distribuidoras en Guatemala, Honduras y Nicaragua; y atención de requerimientos sobre fallas o modificaciones en Sistema Web y/o Bases de Datos en ambientes de prueba, desarrollo o producción.
-               s</li>
-              <li>*MYSQL JAVA JSP SERVLETS</li>
+              <li>- Mantenimiento con SQL en Sistema Web “SIDCO”, en sus distintas Distribuidoras en Guatemala, Honduras y Nicaragua; y atención de requerimientos sobre fallas o modificaciones en Sistema Web y/o Bases de Datos en ambientes de prueba, desarrollo o producción.
+               </li>
+              <li></li>
               
             </ul>
             </p>
@@ -268,8 +268,8 @@
             <p><em>(Outsourcing Banco Agrícola, Davivienda)</em></p>
             <p>
             <ul>
-              <li>Soporte SQL de aplicación helpdesk, para diagnosticar y resolver incidencias.</li>
-              <li>Implementación de nuevas aplicaciones o sistemas operativos, desplegados remotamente desde SCCM, mediante ejecución y creación de Scripts.</li>
+              
+              <li>Soporte de aplicación helpdesk, mediante consultas SQL en la Base de datos, e implementación de nuevas aplicaciones o actualización de los sistemas operativos, desplegados remotamente desde SCCM..</li>
               <li>Instalar y configurar las tecnologías empleadas por el banco, como los equipos informáticos, sistemas operativos, programas y aplicaciones.</li>
             </ul>
             </p>
