--- a/detalleProyecto4.html
+++ b/detalleProyecto4.html
@@ -41,23 +41,22 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Pagina web Banda de Rock</h2>
+            <h2 class="portfolio-title">Gestión de Clientes</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/delitoproletario.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/delitoproletario2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>www.delitoproletario.com</h3>
+            <h3>Java </h3>
             <ul>
-              <li><strong>Cliente</strong>: Mauricio Gonzalez</li>
-              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/delitoproletario.com/" target="_blank">www.delitoproletario.com</a></li>
+              <li><strong>Proyecto académico</strong></li>
+              <li><strong>Página URL</strong>: <a href="https://github.com/NapoleonSNZ/JAVA_JSP_SERVLETS--CRUD" target="_blank">www.delitoproletario.com</a></li>
             </ul>
 
             <p>
-              Página web con Html, CSS, Javascript, con contenido multimedia e informativo.
+              Gestion de Clientes
             </p>
           </div>
 
