--- a/detalleProyecto5.html
+++ b/detalleProyecto5.html
@@ -41,7 +41,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Pagina web Banda de Rock</h2>
+            <h2 class="portfolio-title">Página Web de Películas</h2>
             <div class="owl-carousel portfolio-details-carousel">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <img src="assets/img/portfolio/delitoproletario.jpg" class="img-fluid" alt="">
@@ -50,14 +50,14 @@
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>www.delitoproletario.com</h3>
+            <h3>React</h3>
             <ul>
-              <li><strong>Cliente</strong>: Mauricio Gonzalez</li>
-              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/delitoproletario.com/" target="_blank">www.delitoproletario.com</a></li>
+              <li><strong>Proyecto Académico</strong></li>
+              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/download-movies/" target="_blank"></a>download-movies</li>
             </ul>
 
             <p>
-              Página web con Html, CSS, Javascript, con contenido multimedia e informativo.
+              Página web creada con React para descargar Películas.
             </p>
           </div>
 
