--- a/detalleProyecto5.html
+++ b/detalleProyecto5.html
@@ -43,9 +43,8 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Página Web de Películas</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/delitoproletario.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/delitoproletario2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/proyectoreact.png" class="img-fluid" alt="">
+              
             </div>
           </div>
 
