--- a/detalleProyecto0.html
+++ b/detalleProyecto0.html
@@ -41,22 +41,22 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Página Web de Películas</h2>
+            <h2 class="portfolio-title">Aplicación Móvil</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-            
+              <img src="assets/img/portfolio/proyectoreact.png" class="img-fluid" alt="">
+             
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>React</h3>
+            <h3>https://github.com/Cerberus270/dama-project</h3>
             <ul>
-              <li><strong>Proyecto Académico</strong></li>
-              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/download-movies/" target="_blank"></a>download-movies</li>
+              <li><strong>Cliente</strong>: Itca Académico</li>
+              <li><strong>Página URL</strong>: <a href="https://github.com/Cerberus270/dama-project" target="_blank">Vetplus APP</a></li>
             </ul>
 
             <p>
-              Página web creada con React para descargar Películas.
+              Aplicación Móvil de Veterinaria con React Native y Firebase
             </p>
           </div>
 
@@ -83,7 +83,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
 
-  <!--  JS File -->
+  <!-- JS-->
   <script src="assets/js/main.js"></script>
 
 </body>
