--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-0.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/proyectoreact.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4><a href="https://napoleonsnz.github.io/baristaluna.com/" target="_blank">IR A WEB</a></h4>
+              <h4><a href="https://github.com/Cerberus270/dama-project/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-0.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="detalleProyecto0.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
