--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Desarrollador de Software</h3>
           <p class="font-italic">
-            Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en
-            Ingeniería en Desarrollo de Software. Soporte de Software en Sistema Web
-            "SIDCO" en Productos Alimenticios DIANA. Me gusta el desarrollo web, ser
-            autodidacta, y tengo mucha disposición de aprender tecnologías nuevas cada día.
+            Técnico en Ingeniería en Sistemas Informáticos, cursando 5to año de Ingeniería en Desarrollo de Software. Laborando actualmente en DataSoft S.A. de C.V. como Programador Analista en Productos Alimenticios DIANA. Además, he creado Sitios Web, Aplicaciones Móviles y otros proyectos de forma académica y como freelance. Me gusta aprender nuevas tecnologías, me adapto rápidamente a lo nuevo y siempre dispuesto a trabajar en equipo.  
           </p>
             <hr class="style1">
             <br>
