--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <p><em>DATASOFT S.A. DE C.V. </em></p>
             <p>
             <ul>
-              <li>- Mantenimiento con SQL en Sistema Web “SIDCO”, en sus distintas Distribuidoras en Guatemala, Honduras y Nicaragua; y atención de requerimientos sobre fallas o modificaciones en Sistema Web y/o Bases de Datos en ambientes de prueba, desarrollo o producción.
+              <li>- Mantenimiento con SQL en Sistema Web “SIDCO”, en DIANA y sus distribuidoras en Guatemala, Honduras y Nicaragua; y atención de requerimientos sobre fallas o modificaciones en Sistema Web y/o Bases de Datos en ambientes de prueba, desarrollo o producción.
                </li>
               <li></li>
               
