--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <div class="row">
    <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter="*" class="filter-active">TODOS</li>
               <li data-filter=".filter-app">PAGINAS WEB</li>
               <li data-filter=".filter-card">JAVA APP WEB</li>
               <li data-filter=".filter-web">PROYECTOS REACT</li>
@@ -329,12 +329,27 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4><a href="https://napoleonsnz.github.io/baristaluna.com/" target="_blank">IR A WEB</a></h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="detalleProyecto1.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/proyectoreact.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4><a href="https://github.com/Cerberus270/dama-project/" target="_blank">IR A WEB</a></h4>
+              <h4><a href="https://github.com/Cerberus270/dama-project/" target="_blank">IR A REPO</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-0.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="https://famous-plow-aea.notion.site/Proyecto-DAMA-588bc4d0b17c4170a4122ad2242a3d6f" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                
                 <a href="detalleProyecto0.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="https://www.youtube.com/watch?v=vFKtfJ8iWBA" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link">Video</i></a>
               </div>
             </div>
           </div>
