--- a/detalleProyecto7.html
+++ b/detalleProyecto7.html
@@ -41,22 +41,22 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Página Web de Películas</h2>
+            <h2 class="portfolio-title">Tienda eCommerce</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/midey.png" class="img-fluid" alt="">
             
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>React</h3>
+            <h3>CMS</h3>
             <ul>
               <li><strong>Proyecto Académico</strong></li>
-              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/download-movies/" target="_blank"></a>download-movies</li>
+              <li><strong>Página URL</strong>: <a href="https://www.mideyweddingvibes.com" target="_blank"></a>www.mideyweddingvibes.com/</li>
             </ul>
 
             <p>
-              Página web creada con React para descargar Películas.
+              Página Web y Tienda en Linea de productos para Bodas, con envíos a Guatemala y El Salvador.
             </p>
           </div>
 
