--- a/detalleProyecto7.html
+++ b/detalleProyecto7.html
@@ -44,14 +44,15 @@
             <h2 class="portfolio-title">Tienda eCommerce</h2>
             <div class="owl-carousel portfolio-details-carousel">
               <img src="assets/img/portfolio/midey.png" class="img-fluid" alt="">
-            
+              <img src="assets/img/portfolio/midey2.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mideystore.png" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>CMS</h3>
+            <h3>CMS Wordpress</h3>
             <ul>
-              <li><strong>Proyecto Académico</strong></li>
+              <li><strong>Tienda eCommerce</strong></li>
               <li><strong>Página URL</strong>: <a href="https://www.mideyweddingvibes.com" target="_blank"></a>www.mideyweddingvibes.com/</li>
             </ul>
 
