--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
     <div class="background-container">
 
 
-      <img src="assets/img/suri_dev.png" class="suri" alt="">
+      <img src="assets/img/imgBG9.png" class="suri" alt="">
 
 
       <div class="stars"></div>
