link github update

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> napoleonsaenz85@gmail.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Github:</strong> https://github.com/NapoleonSNZ</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Github:</strong> <a href="https://github.com/NapoleonSNZ">github.com/NapoleonSNZ</a> </li>
 
               </ul>
             </div>
