--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/proyectoreact.png" class="img-fluid" alt="">
             <div class="portfolio-info">
