--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
    <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">TODOS</li>
-              <li data-filter=".filter-app">PAGINAS WEB</li>
-              <li data-filter=".filter-card">JAVA APP WEB</li>
-              <li data-filter=".filter-web">PROYECTOS REACT</li>
+              <li data-filter=".filter-app">SITIOS WEB</li>
+              <li data-filter=".filter-card">JAVA APP WEB & MOVIL</li>
+              <li data-filter=".filter-web">REACT - REACT NATIVE</li>
             </ul>
         </div>
       </div>
