--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/mimotelSV.png" class="img-fluid" alt="">
             <div class="portfolio-info">
