update app description

--- a/detalleProyecto0.html
+++ b/detalleProyecto0.html
@@ -49,14 +49,16 @@
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>https://github.com/Cerberus270/dama-project</h3>
+            <h3>React Native & Firebase</h3>
             <ul>
               <li><strong>Cliente</strong>: Itca Académico</li>
               <li><strong>Página URL</strong>: <a href="https://github.com/Cerberus270/dama-project" target="_blank">Vetplus APP</a></li>
             </ul>
 
             <p>
-              Aplicación Móvil de Veterinaria con React Native y Firebase
+              Aplicación Móvil de Veterinaria con React Native y base de datos no relacional con Firebase
+              Autenticación de usuarios
+              Registro y Control de Pacientes, Médicos, Citas, Vacunación, Desparasitación
             </p>
           </div>
 
