--- a/detalleProyecto4.html
+++ b/detalleProyecto4.html
@@ -52,7 +52,7 @@
             <h3>Java </h3>
             <ul>
               <li><strong>Proyecto académico</strong></li>
-              <li><strong>Página URL</strong>: <a href="https://github.com/NapoleonSNZ/JAVA_JSP_SERVLETS--CRUD" target="_blank">www.delitoproletario.com</a></li>
+              <li><strong>Página URL</strong>: <a href="https://github.com/NapoleonSNZ/JAVA_JSP_SERVLETS--CRUD" target="_blank">repo Github</a></li>
             </ul>
 
             <p>
