--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
-        <a class="btn" href="assets/CV-NSC.pdf" download="CV-NSC">Descargar CV PDF <i class="icofont-download"></i></a>
+        <a class="btn" href="assets/CV_ONSQ2023.pdf" download="CV_ONSQ2023">DESCARGAR C.V. PDF <i class="icofont-download"></i></a>
       </div>
 
 
