--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     <div class="container" data-aos="fade-up">
 
       <div class="section-title">
-        <h2>Páginas web, Proyectos y más</h2>
+        <h2>Proyectos y más</h2>
       </div>
 
       <div class="row">
@@ -438,7 +438,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>Whatsapp</h3>
-            <p><a href="https://api.whatsapp.com/send?phone=50371398377" target="_blank">Enviame un mensaje </a></p>
+            <p><a href="https://api.whatsapp.com/send?phone=50378980293" target="_blank">Enviame un mensaje </a></p>
           </div>
         </div>
 
@@ -466,7 +466,7 @@
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Llamada</h3>
-            <a href="tel:71398377" target="_blank">+503 7139 8377</a>
+            <a href="tel:71398377" target="_blank">+503 7898 0293</a>
           </div>
         </div>
       </div>
