--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Desarrollador de Software</h3>
           <p class="font-italic">
-            Técnico en Ingeniería en Sistemas Informáticos, cursando 5to año de Ingeniería en Desarrollo de Software. Poseo experiencia laboral en soporte IT y  software con SQL, además de desarrollo web en proyectos como freelance y proyectos académicos. Actualmente en búsqueda de oportunidades para poder aplicar mis habilidades y conocimientos en el campo del desarrollo de software. Apasionado por el aprendizaje constante y la resolución de problemas.
+            Técnico en Ingeniería en Sistemas Informáticos, cursando 5to año de Ingeniería en Desarrollo de Software. Con experiencia en soporte IT, mantenimiento de software, bases de datos, además de Desarrollo Web en proyectos como freelance y académicos.
           </p>
             <hr class="style1">
             <br>
