--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
    <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">TODOS</li>
+              <li data-filter=".filter-appweb">LARAVEL</li>
               <li data-filter=".filter-app">SITIOS WEB</li>
               <li data-filter=".filter-card">JAVA APP WEB & MOVIL</li>
               <li data-filter=".filter-web">REACT - REACT NATIVE</li>
@@ -316,11 +317,24 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/vet.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4><a href="https://github.com/irvinitca/veterinariaapp" target="_blank">IR A REPO</a></h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/vet1.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="detalleProyecto8.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/midey.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4><a href="https://www.mideyweddingvibes.com/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/mideystore.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/mideystore.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus">Detalles</i></a>
                 <a href="detalleProyecto7.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
