--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
               <div class="portfolio-links">
                 <a href="https://famous-plow-aea.notion.site/Proyecto-DAMA-588bc4d0b17c4170a4122ad2242a3d6f" data-gall="portfolioGallery" class="venobox" title="App 1" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 
-                <a href="detalleProyecto0.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link"></i></a>
+                <a href="detalleProyecto0.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;">Detalles<i class="bx bx-link"></i></a>
                 <a href="https://www.youtube.com/watch?v=vFKtfJ8iWBA" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Video</i></a>
               </div>
             </div>
