--- a/detalleProyecto8.html
+++ b/detalleProyecto8.html
@@ -43,21 +43,25 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Sistema Web para Veterinaria</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/midey.png" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/midey2.png" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/mideystore.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/vet2.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/vet3.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/vet4.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/vet5.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/vet6.png" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Laravel 10</h3>
             <ul>
-              <li><strong>Php Blade Livewire JS MySQL </strong></li>
+              <li><strong>Php Blade Livewire Bootstrap JS MySQL </strong></li>
               <li><strong>Repo URL</strong>: <a href="https://github.com/irvinitca/veterinariaapp" target="_blank"></a>veterinariaapp</li>
             </ul>
 
-            <p>
-              Página Web y Tienda en Linea de productos para Bodas, con envíos a Guatemala y El Salvador.
+            <p>o.
+              La clínica veterinaria C.I.O solicito una aplicación que le permita administrar todas sus consultas y pacientes. 
+              Inicio de Sesión por Roles de Usuarios(Admin, Recepcionista, Veterinario), registros de Usuarios, Clientes, Mascotas,
+              Se realizan Citas, ademas de varios tipos de Reportes en PDF.
             </p>
           </div>
 
