--- a/detalleProyecto8.html
+++ b/detalleProyecto8.html
@@ -55,7 +55,7 @@
             <h3>Laravel 10</h3>
             <ul>
               <li><strong>Php Blade Livewire Bootstrap JS MySQL </strong></li>
-              <li><strong>Repo URL</strong>: <a href="https://github.com/irvinitca/veterinariaapp" target="_blank"></a>veterinariaapp</li>
+              <li><strong>Repo URL</strong>: <a href="https://github.com/irvinitca/veterinariaapp" target="_blank">veterinariaapp</a></li>
             </ul>
 
             <p>
