--- a/detalleProyecto8.html
+++ b/detalleProyecto8.html
@@ -63,6 +63,7 @@
               Inicio de Sesión por Roles de Usuarios(Admin, Recepcionista, Veterinario), registros de Usuarios, Clientes, Mascotas,
               Se realizan Citas, ademas de varios tipos de Reportes en PDF.
             </p>
+            <h4>Algunos requerimientos:</h4>
             <ul>
                  <li>• Se requiere que los usuarios de la solución puedan iniciar sesión mediante un usuario y contraseña. Ningún usuario podrá visualizar ninguna pantalla ni realizar ninguna consulta si no ha sido validado su usuario y contraseña</li>
                   <li>• Se requiere una pantalla que permita el registro de los datos más importantes de los clientes (humanos).</li>
