--- a/detalleProyecto8.html
+++ b/detalleProyecto8.html
@@ -43,6 +43,7 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Sistema Web para Veterinaria</h2>
             <div class="owl-carousel portfolio-details-carousel">
+              <img src="assets/img/portfolio/vet1.png" class="img-fluid" alt="">
               <img src="assets/img/portfolio/vet2.png" class="img-fluid" alt="">
               <img src="assets/img/portfolio/vet3.png" class="img-fluid" alt="">
               <img src="assets/img/portfolio/vet4.png" class="img-fluid" alt="">
