update-link project

--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/vet.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4><a href="https://github.com/irvinitca/veterinariaapp" target="_blank">IR A REPO</a></h4>
+              <h4><a href="https://fcoquezadalab.com/grupo1/login" target="_blank">PROYECTO</a></h4>
+              <h5><a href="https://github.com/irvinitca/veterinariaapp" target="_blank">Repo github</a></h5>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/vet.png" data-gall="portfolioGallery" class="venobox" title="App 1" style="font-size: 20px;"><i class="bx bx-plus">zoom</i></a>
                 <a href="detalleProyecto8.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" style="font-size: 20px;"><i class="bx bx-link">Detalles</i></a>
