--- a/detalleProyecto8.html
+++ b/detalleProyecto8.html
@@ -60,6 +60,8 @@
             </ul>
 
             <p>
+              users: adminvt@yopmail.com, recepcionvt@yopmail.com, veterinariovt1@yopmail.com
+              pass: 123456789
               La clínica veterinaria C.I.O solicito una aplicación que le permita administrar todas sus consultas y pacientes. 
               Inicio de Sesión por Roles de Usuarios(Admin, Recepcionista, Veterinario), registros de Usuarios, Clientes, Mascotas,
               Se realizan Citas, ademas de varios tipos de Reportes en PDF.
